created the user route and the controller

--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgresql:102030@localhost:5432/adopet?schema=public"
+DATABASE_URL="postgresql://postgres:102030@localhost:5432/adopet?schema=public"
+
+API_PORT=3000
