--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@prisma/client": "^4.14.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "eslint": "^8.40.0",
