--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "prisma": {
     "seed": "node prisma/seed.js"
   },
-  "author": "",
+  "author": "Gilberto Antonio",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.14.0",
-    "dotenv": "^16.0.3",
+    "@prisma/client": "^5.4.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "zod": "^3.21.4"
   },
@@ -23,7 +23,7 @@
     "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "nodemon": "^2.0.22",
-    "prisma": "^4.14.0"
+    "nodemon": "^3.0.1",
+    "prisma": "^5.4.2"
   }
 }
