--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./api/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
