--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "./api/index.js",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand",
-    "test:watch": "node --runInBand --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --detectOpenHandles --watch",
-    "test:coverage": "node --runInBand --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --detectOpenHandles --coverage",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --detectOpenHandles --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --detectOpenHandles --coverage",
     "start": "nodemon server.js"
   },
   "prisma": {
