--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
+    "redis": "^4.6.10",
     "zod": "^3.21.4"
   },
   "devDependencies": {
