--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --detectOpenHandles",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --detectOpenHandles --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --detectOpenHandles --coverage",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "migrate:postgres": "dotenv -e .env.production -- npx prisma migrate deploy",
+    "seed:postgres": "dotenv -e .env.production -- npx prisma db seed"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -21,6 +23,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.3.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
